added to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ LD46KIA/Temp/UnityLockfile
 LD46KIA/Temp/UnityTempFile-2e3680ded817a3840b5ce06a9c282ff1
 
 LD46KIA/Temp/UnityTempFile-b4172b192f631c246b5c1147f94815e5
+
+LD46KIA/Library/SourceAssetDB
